# shiny-python-workflow

./: README.md  pyproject.toml
in_quarto/: app.html  app.py  app.qmd  app2.html  app2.qmd  app3.html  app4.html  app4.qmd
in_quarto/app3_files/libs/bootstrap/: bootstrap-bd8012e9dc5f1bfddffbce93e95a3e43.min.css
